--- a/css/styles.css
+++ b/css/styles.css
@@ -249,11 +249,16 @@ h1, h2, h3{
 
 /* footer */
 
-.ftr-box{
-  height: 252px;
-  padding-top: 60px;
-  padding-bottom: 60px;
+.ftr{
   background-color:var(--bg-color);
+  }
+
+.ftr-box{
+  width: 1200px;
+  margin: 0 auto;
+  padding: 60px 15px;
+  
+  
   }
 
 .addr{
