--- a/css/styles.css
+++ b/css/styles.css
@@ -82,10 +82,16 @@ body {
 
 
 
-.menu-list,
+.menu-list{
+  display: flex;
+  margin-right: 223px;
+  margin-bottom: 0;
+}
+
+
 .contact-list{
   display: flex;
-  justify-content: space-between;
+  margin-right: 0;
   margin-bottom: 0;
 }
 
