--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 :root {
   --prime-color: #2196F3;
   --second-color: #188CE8;
@@ -28,6 +22,23 @@ body {
   color: var(--prime-text-color);
  }
 
+/* global */
+
+ img{
+  display: block;
+  max-width: 100%;
+  height: auto;
+  }
+ ul{
+    list-style: none;
+    margin-top: 0;
+    margin-left: 0;
+    padding-left: 0;
+  }
+  a{text-decoration: none;}
+
+  button{border: none;}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -39,32 +50,32 @@ body {
   clip: rect(0 0 0 0);
 }
 
-/* -- header  -- */
-
-.hdr{
+.container{
   width: 1200px;
-  height: 80px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+/* -- header  -- */
+
+.header{
+  height: 80px;
   border-bottom: 1px solid --c1-color ;
   } 
 
-.hdr-block{
+.header-block{
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-
-
 .logo{
   font-size: 26px;
-  font-style: normal;
   font-weight: 700;
   line-height: 1.2;
   letter-spacing: 0.03em;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   text-decoration: none;
 }
 
@@ -81,9 +92,9 @@ body {
 }
 
 
-
 .menu-list{
   display: flex;
+  width: 304px;
   margin-right: 223px;
   margin-bottom: 0;
 }
@@ -101,20 +112,6 @@ body {
 
 .contact-one {
   margin-right: 50px; 
-}
-
-.menu-list,
-.contact-list,
-.plan-list,
-.deal-list,
-.team-list,
-.ftr-addr-list,
-.btn-list,.folio-list{
-  list-style: none;
-  margin-top: 0;
-  margin-left: 0;
-  padding-left: 0;
-  padding-right: 0;
 }
 
 .menu-link{
@@ -143,18 +140,17 @@ body {
 
 /* hero */
 
-.hero-box{
-  margin: 0 auto;
-  padding: 200px 15px ;
-  width: 1200px;
+.hero{
+  height: 600px;
+  padding: 200px 0;
+  background:var(--bg-color);
+}
+
+.hero-block{
+  display: block;
   align-items: center;
   text-align: center;
   }
-.hero{
-
-  height: 600px;
-  background:var(--bg-color);
-}
 
 .hero-title{
   margin-top: 0;
@@ -175,7 +171,7 @@ body {
   border-radius: 4px;
   border: none;
   cursor: pointer;
-  font-family: Roboto;
+  font-family: inherit;
   font-weight:700;
   font-size: 16px;
   line-height: 1.87;
@@ -190,6 +186,11 @@ body {
 
 /* sections plan, plan & .placement */
 
+.section{
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .plan-list-block,
 .deal-list-block,
 .team-list-block{
@@ -199,20 +200,6 @@ body {
   padding-bottom: 0;
 } 
 
-
-.plan-box,
-.deal-box,
-.team-box,
-.ftr-box,
-.portfolio-box{
-  margin: 0 auto;
-  padding: 94px 15px ;
-  width: 1200px;
- }
-
-/* .plan-list{
-      
-} */
 
 .plan-item{
   width: 270px;}
@@ -277,41 +264,35 @@ body {
 
 /* footer */
 
-.ftr{
+.footer{padding: 60px 0;
   background-color:var(--bg-color);
   }
 
-.ftr-box{
-  width: 1200px;
-  margin: 0 auto;
-  padding: 60px 15px;
-  }
-
-.addr{
+address{
   font-style: normal;
 }
 
-.ftr-addr-list{
+.footer-address-list{
   display: block;
   margin-bottom: 0;
 }
 
-.ftr-addr-item{
+.footer-address-item{
    margin-bottom: 9px;
 }
 
-.ftr-address{
+.footer-address-link-one{
  color: var(--c-color);
  text-decoration: none;
 }
 
-.ftr-addr{
+.footer-address-link{
   color: var(--c3-color);
   text-decoration: none;
 }
 
-.ftr-addr:hover,
-.ftr-addr:focus{
+.footer-address-link:hover,
+.footer-address-link:focus{
   color: var(--prime-color);
 }
 
@@ -319,7 +300,7 @@ body {
   color:var(--c-color);
   }
 
-.ftr-logo{
+.footer-logo{
   display: block;
   margin-bottom: 20px;
 }
@@ -349,7 +330,6 @@ body {
   margin-right: 8px;
 }
 
-.btn:active,
 .btn:hover,
 .btn:focus{
 background: var(--prime-color);
@@ -396,8 +376,3 @@ flex-wrap: wrap;
   margin-bottom: 0;
 }
 
-.img{
-  display: block;
-  max-width: 100%;
-  height: auto;
-  }
